k8s/evaluation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: evaluation
  name: evaluation
  namespace: dataluation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evaluation
  template:
    metadata:
      labels:
        app: evaluation
    spec:
      containers:
        - name: evaluation
          image: ghcr.io/checky2010/studies.cnd/evaluation:main
          imagePullPolicy: Always
      restartPolicy: Always
