k8s/generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: generator
  name: generator
  namespace: dataluation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: generator
  template:
    metadata:
      labels:
        app: generator
    spec:
      containers:
        - name: generator
          image: asd # TODO
          imagePullPolicy: Always
      restartPolicy: Always
