k8s/evaluation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evaluation
  labels:
    app: evaluation
  namespace: dataluation
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: evaluation
  type: ClusterIP
