k8s/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  labels:
    app: rabbitmq
  namespace: dataluation
spec:
  ports:
    - port: 5672
      protocol: TCP
      targetPort: 5672
      name: rabbitmq
    - port: 15672
      protocol: TCP
      targetPort: 15672
      name: management
  selector:
    app: rabbitmq
  type: ClusterIP
